apps/log-output/manifests/exercise_2.03/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: frankhul/log-output:v0.2
