apps/log-output/manifests/exercise_2.03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
